--- a/FodboldApp/FodboldApp/FodboldApp/View/News.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/News.xaml
@@ -10,7 +10,8 @@
             Padding="0, 0, 0, 0"
                          Margin="0, 0, 0, 0"
                          Spacing="0"
-                         BackgroundColor="#ffffff">
+                         BackgroundColor="#ffffff"
+                     HorizontalOptions="FillAndExpand">
             <StackLayout.BindingContext>
                 <viewmodels:NewsVM/>
             </StackLayout.BindingContext>
