Model for League Table added

--- a/FodboldApp/FodboldApp/FodboldApp/View/FrontPage.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/FrontPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             BackgroundImage="frontpage_background.png"
+             BackgroundImage="Images/frontpage_background.png"
              xmlns:local="clr-namespace:FodboldApp.View.Converter" 
              x:Class="FodboldApp.FrontPage">
 
