"Næste" button styled for Android and iOS

--- a/FodboldApp/FodboldApp/FodboldApp/View/FrontPage.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/FrontPage.xaml
@@ -43,7 +43,7 @@
 
                     <Button Text="Næste"
                 HorizontalOptions="Center"
-                VerticalOptions="Center"
+                VerticalOptions="Center" Style="{StaticResource buttonStyle}"
                     Command="{Binding ContinueCommand}"/>
                 </StackLayout>
             </StackLayout>
