--- a/FodboldApp/FodboldApp/FodboldApp/View/SearchResultView.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/SearchResultView.xaml
@@ -6,18 +6,17 @@
              xmlns:flv="clr-namespace:DLToolkit.Forms.Controls;assembly=DLToolkit.Forms.Controls.FlowListView">
     
     <ContentView.Content>
-      <StackLayout>
-            <StackLayout.BindingContext>
-                <viewmodels:HeaderVM/>
-            </StackLayout.BindingContext>
-            <flv:FlowListView ItemsSource="{Binding SearchResultList}" FlowItemTappedCommand="{Binding ArticleTappedCommand}" FlowColumnCount="1" SeparatorVisibility="Default" HasUnevenRows="True">
+        <StackLayout BindingContext="{x:Static viewmodels:ViewModelLocator.HeaderVM}">
+            <flv:FlowListView FlowItemsSource="{Binding SearchResultList}" 
+                              FlowItemTappedCommand="{Binding ArticleCommand}"
+                              FlowColumnCount="1" SeparatorVisibility="Default" 
+                              SeparatorColor="Black" HasUnevenRows="True" FlowLastTappedItem="{Binding SelectedItem, Mode=TwoWay}">
                 <flv:FlowListView.FlowColumnTemplate>
                     <DataTemplate>
-                        <ViewCell>
-                            <Grid Padding="10" RowSpacing="10" ColumnSpacing="5">
-                                <Label Grid.Column="1" Text="{Binding ArticleTitle}" FontSize="24"/>
-                            </Grid>
-                        </ViewCell>
+                        <StackLayout Spacing="0">
+                            <Label Text="{Binding Title}" VerticalTextAlignment="Start" VerticalOptions="Start" TextColor="Black" FontSize="18"/>
+                            <Label Text="{Binding Resume}" VerticalTextAlignment="Start" VerticalOptions="Start" TextColor="Gray" FontSize="12"/>
+                        </StackLayout>
                     </DataTemplate>
                 </flv:FlowListView.FlowColumnTemplate>
             </flv:FlowListView>
